--- a/EPL 2020-21.ipynb
+++ b/EPL 2020-21.ipynb
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5f65694b",
+   "id": "c1688552",
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a12ebc14",
+   "id": "a4ad753f",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f516a5f3",
+   "id": "83b45298",
    "metadata": {
     "scrolled": true
    },
@@ -1581,7 +1581,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "61ba3475",
+   "id": "497bce7b",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2cd2d168",
+   "id": "408a97a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e4d945d9",
+   "id": "6e9f046e",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ba96df63",
+   "id": "6a7fdc00",
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "88c56631",
+   "id": "8aef3bf8",
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1716,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ce38c58a",
+   "id": "bd7a8046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "5f88669f",
+   "id": "c3f594e8",
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a1552c23",
+   "id": "bc54da01",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f698ced6",
+   "id": "70fea8da",
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "64b4bf8b",
+   "id": "eaf94f69",
    "metadata": {},
    "outputs": [
     {
@@ -2089,7 +2089,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "42a0b4de",
+   "id": "4e0e23b7",
    "metadata": {},
    "outputs": [
     {
@@ -2218,7 +2218,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "66c5e5b7",
+   "id": "d976c6c7",
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2276,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7d0a6f82",
+   "id": "2dca5b8c",
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b6314dff",
+   "id": "46c380f7",
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2450,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2cb7c52c",
+   "id": "df1df4a9",
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2490,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6c222728",
+   "id": "602a4589",
    "metadata": {},
    "outputs": [
     {
@@ -2624,7 +2624,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "55bf1975",
+   "id": "56cedb0e",
    "metadata": {},
    "outputs": [
     {
@@ -2653,7 +2653,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2edde2fb",
+   "id": "1307dafe",
    "metadata": {},
    "outputs": [
     {
@@ -2692,11 +2692,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0fd2bb",
+   "id": "70bccb3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#complete"
+    "#complete r55"
    ]
   }
  ],
